--- a/ZotPad/MainStoryboard_iPad.storyboard
+++ b/ZotPad/MainStoryboard_iPad.storyboard
@@ -965,6 +965,49 @@
             </objects>
             <point key="canvasLocation" x="-1668" y="-1354"/>
         </scene>
+        <!--WebDAV Authentication View Controller - WebDAV redirect-->
+        <scene sceneID="DnA-QO-4WO">
+            <objects>
+                <viewController storyboardIdentifier="WebDAVRedirectDialog" title="WebDAV redirect" modalPresentationStyle="pageSheet" id="Z3h-M4-dg1" customClass="ZPWebDAVAuthenticationViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BcP-7D-oqd">
+                        <rect key="frame" x="0.0" y="20" width="768" height="748"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="zoN-iS-9iK">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="WebDAV redirect" id="ohU-jb-76p">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="HgT-Cg-9D8">
+                                            <connections>
+                                                <action selector="cancel:" destination="Z3h-M4-dg1" id="WhT-RO-7Gg"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <webView contentMode="scaleToFill" id="e5E-FF-riP">
+                                <rect key="frame" x="0.0" y="44" width="768" height="704"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Z3h-M4-dg1" id="M4Q-DB-AAf"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <modalPageSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="webView" destination="e5E-FF-riP" id="pnE-j8-wpE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="POx-kX-btt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-476" y="-2329"/>
+        </scene>
         <!--Authentication Dialog - Login to Zotero-->
         <scene sceneID="kZo-Vw-R2l">
             <objects>
@@ -1006,7 +1049,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tOl-Er-2a8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-438" y="-1375"/>
+            <point key="canvasLocation" x="-464" y="-1346"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="50">
