--- a/ZotPad/MainStoryboard_iPhone.storyboard
+++ b/ZotPad/MainStoryboard_iPhone.storyboard
@@ -1045,6 +1045,49 @@
             </objects>
             <point key="canvasLocation" x="-492" y="-636"/>
         </scene>
+        <!--WebDAV Authentication View Controller - WebDAV redirect-->
+        <scene sceneID="QQX-Jb-Hba">
+            <objects>
+                <viewController storyboardIdentifier="WebDAVRedirectDialog" title="WebDAV redirect" modalPresentationStyle="pageSheet" id="Oh6-cP-hpL" customClass="ZPWebDAVAuthenticationViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PBa-3e-KmB">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="Ad3-ls-jAC">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="WebDAV redirect" id="Xq1-N8-f0t">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="VXH-Nj-gKg">
+                                            <connections>
+                                                <action selector="cancel:" destination="Oh6-cP-hpL" id="Vr3-h3-Z6P"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <webView contentMode="scaleToFill" id="7eX-4I-lAq">
+                                <rect key="frame" x="0.0" y="44" width="320" height="416"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Oh6-cP-hpL" id="Apq-xA-vRl"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="webView" destination="7eX-4I-lAq" id="6tw-hq-WQ1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xX1-zU-Wlk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6" y="-1329"/>
+        </scene>
     </scenes>
     <resources>
         <image name="AccountSettingsUI_com.apple.Dataclass.Notes.png" width="29" height="29"/>
@@ -1113,7 +1156,6 @@
                 <relationship kind="action" name="previous:"/>
                 <relationship kind="action" name="toggleNavigationBar:"/>
                 <relationship kind="action" name="togglePullPane:"/>
-                <relationship kind="action" name="toggleStar:"/>
                 <relationship kind="outlet" name="leftPullPane" candidateClass="UIView"/>
                 <relationship kind="outlet" name="leftPullTab" candidateClass="UIView"/>
                 <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
@@ -1189,6 +1231,13 @@
                 <relationship kind="outlet" name="carousel" candidateClass="iCarousel"/>
                 <relationship kind="outlet" name="label" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="secondaryCarousel" candidateClass="iCarousel"/>
+            </relationships>
+        </class>
+        <class className="ZPWebDAVAuthenticationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPWebDAVAuthenticationViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
         <class className="iCarousel" superclassName="UIView">
